--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flash Cards JOF</title>
 </head>
 <body>
-    <h1>bom dia</h1>
+    <main>
+<section id="container">
+    <article class="cartao">
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta">
+    A Copa do Mundo ocorre a cada quantos anos?
+</div>
+</div>
+    </article>
+</section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido por Volnei Fernandes </p>
+    </footer>
+    
 </body>
 </html>
