--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <div class="cartao__conteudo__pergunta">
     A Copa do Mundo ocorre a cada quantos anos?
 </div>
+<div class="cartao__conteudo__resposta">
+    Ocorre a cada 4 anos.
+</div>
 </div>
     </article>
 </section>
