--- a/index.html
+++ b/index.html
@@ -23,6 +23,50 @@
 </div>
 </div>
     </article>
+     <article class="cartao">
+<div class="cartao__conteudo">
+<h3>Futebol</h3>
+<div class="cartao__conteudo__pergunta">
+    Quantas Copas do Brasil o Grêmio ganhou?
+</div>
+<div class="cartao__conteudo__resposta">
+    5 Copas
+</div>
+</div>
+    </article>
+     <article class="cartao">
+<div class="cartao__conteudo">
+<h3>Matemática</h3>
+<div class="cartao__conteudo__pergunta">
+    Qual a soma dos angulos internos de um triângulo
+</div>
+<div class="cartao__conteudo__resposta">
+   180° 
+</div>
+</div>
+    </article>
+     <article class="cartao">
+<div class="cartao__conteudo">
+<h3>Matemática</h3>
+<div class="cartao__conteudo__pergunta">
+    A Copa do Mundo ocorre a cada quantos anos?
+</div>
+<div class="cartao__conteudo__resposta">
+    Ocorre a cada 4 anos.
+</div>
+</div>
+    </article>
+     <article class="cartao">
+<div class="cartao__conteudo">
+<h3>Matemátical</h3>
+<div class="cartao__conteudo__pergunta">
+    Quais os lados de um triãngilo Pitagórico?
+</div>
+<div class="cartao__conteudo__resposta">
+    3, 4 e 5.
+</div>
+</div>
+    </article>
 </section>
     </main>
     <footer>
