--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
 </div>
 </div>
     </article>
+     <article class="cartao">
+<div class="cartao__conteudo">
+<h3>Matemática</h3>
+<div class="cartao__conteudo__pergunta">
+   Quanto é 2+2?
+</div>
+<div class="cartao__conteudo__resposta">
+    4
+</div>
+</div>
+    </article>
 </section>
     </main>
     <footer>
